# pa-rag

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml
backend/: Dockerfile  ingest.py  main.py  rag.py
data/: README
frontend/: Dockerfile  app.py  requirements.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/doc_index/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/doc_index/0/segments/2ebb8905-b8d2-43f0-bffb-21d7d8689a60/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/doc_index/0/segments/55bdc437-5cf0-4eee-86b5-48aa1562feca/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/doc_index/0/segments/72b960bf-9dcb-43fe-892f-7dbffdd8bdea/: mutable_id_tracker.mappings
qdrant_storage/collections/doc_index/0/segments/c42672f7-9559-405c-8315-0f34bfb56aaa/: mutable_id_tracker.mappings  mutable_id_tracker.versions
test/: test.py
